--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Authors@R: c(
     person('Lincoln', 'Mullen', role = c('ctb', 'cph')))
 Maintainer: Jan Wijffels <jan.wijffels@vub.be>
 Description: Find similarities between texts using the Smith-Waterman algorithm. The algorithm performs local sequence alignment and determines similar regions between two strings.
+    The Smith-Waterman algorithm is explained in the paper: "Identification of common molecular subsequences" by T.F.Smith and M.S.Waterman (1981), available at <doi:10.1016/0022-2836(81)90087-5>. 
+    This package implements the same logic for sequences of words and letters instead of molecular sequences.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Imports: Rcpp (>= 0.11.5)
