--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: text.alignment
 Type: Package
 Title: Text Alignment with Smith-Waterman
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: c(
-    person('Jan', 'Wijffels', role = c('aut', 'cre', 'cph'), email = 'jan.wijffels@vub.be', comment = "Rewrite of functionalities from the textreuse R package"), 
+    person('Jan', 'Wijffels', role = c('aut', 'cre', 'cph'), email = 'jwijffels@bnosac.be', comment = "Rewrite of functionalities from the textreuse R package"), 
     person('Vrije Universiteit Brussel - DIGI: Brussels Platform for Digital Humanities', role = 'cph'),
     person('Lincoln', 'Mullen', role = c('ctb', 'cph')))
-Maintainer: Jan Wijffels <jan.wijffels@vub.be>
+Maintainer: Jan Wijffels <jwijffels@bnosac.be>
 Description: Find similarities between texts using the Smith-Waterman algorithm. The algorithm performs local sequence alignment and determines similar regions between two strings.
     The Smith-Waterman algorithm is explained in the paper: "Identification of common molecular subsequences" by T.F.Smith and M.S.Waterman (1981), available at <doi:10.1016/0022-2836(81)90087-5>. 
     This package implements the same logic for sequences of words and letters instead of molecular sequences.
@@ -15,7 +15,7 @@ URL: https://github.com/DIGI-VUB/text.alignment
 Encoding: UTF-8
 Imports: Rcpp (>= 0.11.5)
 LinkingTo: Rcpp
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests:
     knitr,
     markdown
